@@ -1,3 +1,8 @@
+2023-06-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/crc32c/crc32c_config.h: Undefine HAVE_BUILTIN_PREFETCH and
+	HAVE_MM_PREFETCH for maximum portability and builds on M1/M2/Arm64
+
 2023-06-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.6.32
